--- a/project_ml_demo/requirements.txt
+++ b/project_ml_demo/requirements.txt
@@ -1,7 +1,7 @@
-pandas
-numpy
-scikit-learn
-matplotlib
-plotly
-streamlit
-joblib
+pandas==2.0.3
+numpy==1.24.3
+scikit-learn==1.3.0
+matplotlib==3.7.2
+plotly==5.15.0
+streamlit==1.28.0
+joblib==1.3.1
