--- a/project_ml_demo/requirements.txt
+++ b/project_ml_demo/requirements.txt
@@ -1,7 +1,7 @@
-pandas==2.0.3
-numpy==2.1.0
-scikit-learn==1.3.0
-matplotlib==3.7.2
-plotly==5.15.0
-streamlit==1.28.0
-joblib==1.3.1
+pandas>=2.1.0
+numpy>=2.0.0
+scikit-learn>=1.5.0
+matplotlib>=3.8.0
+plotly>=5.18.0
+streamlit>=1.32.0
+joblib>=1.4.0
