--- a/project_ml_demo/requirements.txt
+++ b/project_ml_demo/requirements.txt
@@ -1,7 +1,7 @@
-pandas>=2.1.0
-numpy>=2.0.0
-scikit-learn>=1.5.0
-matplotlib>=3.8.0
-plotly>=5.18.0
-streamlit>=1.32.0
-joblib>=1.4.0
+pandas
+numpy
+scikit-learn
+matplotlib
+plotly
+streamlit
+joblib
