--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-pandas
-numpy
-scikit-learn
-matplotlib
-plotly
-streamlit
-joblib
+streamlit==1.50.0
+pandas==2.3.3
+numpy==2.3.4
+scikit-learn==1.5.2
+joblib==1.4.2
+matplotlib==3.9.2
